# pubtator

./: AGENTS.md  Snakefile  pyproject.toml
config/: config.example.yml
scripts/: count_genes.py  create_chemical_chemical_comat.py  create_chemical_pmid_mapping.py  create_disease_disease_comat.py  create_disease_pmid_mapping.py  create_gene_chemical_comat.py  create_gene_disease_comat.py  create_gene_gene_comat.py  create_gene_mapping.py  create_gene_pmid_mapping.py  create_human_gene_mapping.py  create_mutation_disease_comat.py  create_mutation_pmid_mapping.py  filter_data.py  sparse_utils.py  summarize_counts.py  utils.py
tests/: __init__.py  conftest.py
tests/unit/: test_sparse_utils.py
