[project]
name = "pubtator-pipeline"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "biothings-client>=0.4.1",
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
    "scipy>=1.17.0",
    "snakemake>=9.16.2",
]

[tool.ruff]
exclude = [ ".git", ".snakemake", "unused" ]

[tool.ruff.lint]
ignore = ["F821"]

[dependency-groups]
dev = [
    "basedpyright>=1.37.4",
]
